<?xml version="1.0"?>

<package format="3">
  <name>destroyer</name>
  <version>0.0.0</version>
  <description>Destroyer II ROS2 Package</description>

<maintainer email="you@example.com">farel</maintainer> <license>MIT</license>

<buildtool_depend>ament_cmake</buildtool_depend>

<depend>rclcpp</depend> <depend>std_msgs</depend> <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
